--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 
 # Dependency directories
 node_modules/
+frontend/node_modules/
 jspm_packages/
 
 # Optional npm cache directory
@@ -11,7 +12,10 @@ jspm_packages/
 
 # dotenv environment variables
 .env
-.env.*.local
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
 # Logs
 logs/
@@ -29,12 +33,70 @@ temp/
 
 # Test coverage
 coverage/
-.nyc_output/
+.nyc_output
+.lib-cov/
 
 # Optional lockfiles (uncomment if not used)
 # package-lock.json
 # yarn.lock
 # pnpm-lock.yaml
+
+# Grunt intermediate storage
+.grunt
+
+# Bower dependency directory
+bower_components/
+
+# node-waf configuration
+.lock-wscript
+
+# Compiled binary addons
+build/Release
+
+# TypeScript cache
+*.tsbuildinfo
+
+# Optional eslint cache
+.eslintcache
+
+# Microbundle cache
+.rpt2_cache/
+.rts2_cache_cjs/
+.rts2_cache_es/
+.rts2_cache_umd/
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# parcel-bundler cache
+.cache
+.parcel-cache
+
+# Next.js build output
+.next/
+frontend/.next/
+frontend/out/
+
+# Nuxt.js build / generate output
+.nuxt
+
+# Gatsby files
+.cache/
+public
+
+# Storybook build outputs
+.out
+.storybook-out
+
+# Temporary folders
+tmp/
+temp/
 
 # ===================
 # Docker
@@ -62,16 +124,28 @@ db/
 
 # macOS
 .DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
 
 # Windows
 Thumbs.db
+ehthumbs.db
 
 # IDEs
 .vscode/
 .idea/
 *.sw?
+*.swp
+*.swo
+*~
 
 # Misc
 *.tgz
 *.seed
 *.swp
+
+# Database
+*.sqlite
+*.db
